--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -7,7 +7,7 @@ if(TARGET common)
     message("common is already defined")
 else()
     include_directories(${SHARED_LIB_INCLUDE_DIR})
-    set(LIB_SRCS ./src/graph.cxx ./src/conf.cxx ./src/parse.cxx)
+    set(LIB_SRCS ./src/graph.cxx ./src/conf.cxx ./src/parse.cxx ./src/SpookyV2.cpp)
     add_library(common STATIC ${LIB_SRCS})
     target_link_libraries(common Boost::program_options)
 endif()
