--- a/graphAnalyser/CMakeLists.txt
+++ b/graphAnalyser/CMakeLists.txt
@@ -13,7 +13,7 @@ if (Boost_FOUND)
     add_subdirectory(./../common common)
     include_directories(${SHARED_LIB_INCLUDE_DIR})
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/metrics)
-    add_executable(graph_analyser main.cxx options.cxx metrics/metric.h metrics/sizeMetric.cxx)
+    add_executable(graph_analyser main.cxx metrics/metric.h metrics/sizeMetric.cxx)
     target_link_libraries(graph_analyser stdc++fs)
     target_link_libraries(graph_analyser common)
 endif()
