Added external metric loading and execution. Improved error handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,5 @@ if (Boost_FOUND)
     target_compile_definitions(graph_analyser PRIVATE STORE_PATH="${STORE_PATH}" CONF_PATH="${CONF_PATH}")
     set(CMAKE_INSTALL_PREFIX ${INSTALL_PREF} CACHE PATH "..." FORCE)
     install(TARGETS graph_analyser RUNTIME DESTINATION .)
-    install(DIRECTORY store DESTINATION .)
+    install(DIRECTORY store DESTINATION . USE_SOURCE_PERMISSIONS MESSAGE_NEVER)
 endif()
