added graphMapper utility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,16 +11,20 @@ SET(CMAKE_CXX_FLAGS_DEBUG "-g")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
 
 SET(STORE_PATH "./store/")
-SET(CONF_PATH "./conf")
+SET(CONF_PATH_ANALYSER "./graph_analyser.conf")
+SET(CONF_PATH_MAPPER "./graph_mapper.conf")
 SET(INSTALL_PREF "/home/void/Uni/Y3/PRJ/install/")
 
 if (Boost_FOUND)
     set(CMAKE_CXX_STANDARD 17)
     set(CXX_STANDARD_REQUIRED ON)
-    project(graph_analyser)
     add_subdirectory(graphAnalyser)
-    target_compile_definitions(graph_analyser PRIVATE STORE_PATH="${STORE_PATH}" CONF_PATH="${CONF_PATH}")
+    add_subdirectory(graphMapper)
+    target_compile_definitions(graph_analyser PRIVATE CONF_PATH="${CONF_PATH_ANALYSER}")
+    target_compile_definitions(graph_mapper PRIVATE CONF_PATH="${CONF_PATH_MAPPER}")
+    target_compile_definitions(common PRIVATE STORE_PATH="${STORE_PATH}")
     set(CMAKE_INSTALL_PREFIX ${INSTALL_PREF} CACHE PATH "..." FORCE)
     install(TARGETS graph_analyser RUNTIME DESTINATION .)
+    install(TARGETS graph_mapper RUNTIME DESTINATION .)
     install(DIRECTORY store DESTINATION . USE_SOURCE_PERMISSIONS MESSAGE_NEVER)
 endif()
