--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -9,5 +9,6 @@ else()
     include_directories(${SHARED_LIB_INCLUDE_DIR})
     set(LIB_SRCS ./src/graph.cxx ./src/opts.cxx ./src/util.cxx ./src/metricset.cxx ./src/SpookyV2.cpp)
     add_library(common STATIC ${LIB_SRCS})
+    target_link_libraries(common stdc++fs)
     target_link_libraries(common Boost::program_options)
 endif()
