--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,23 +8,30 @@ find_package(Boost 1.69.0 REQUIRED COMPONENTS program_options)
 
 SET(CMAKE_CXX_FLAGS "-Wall -Wextra")
 SET(CMAKE_CXX_FLAGS_DEBUG "-g -pg")
-SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
+SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 SET(STORE_PATH "./store/")
 SET(CONF_PATH_ANALYSER "./graph_analyser.conf")
 SET(CONF_PATH_MAPPER "./graph_mapper.conf")
+SET(CONF_PATH_BENCHMARKER "./benchmarker.conf")
 SET(INSTALL_PREF "/home/void/Uni/Y3/PRJ/install/")
+
+cmake_policy(SET CMP0069 NEW)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION FALSE)
 
 if (Boost_FOUND)
     set(CMAKE_CXX_STANDARD 17)
     set(CXX_STANDARD_REQUIRED ON)
     add_subdirectory(graphAnalyser)
     add_subdirectory(graphMapper)
+    add_subdirectory(benchmarker)
     target_compile_definitions(graph_analyser PRIVATE CONF_PATH="${CONF_PATH_ANALYSER}")
     target_compile_definitions(graph_mapper PRIVATE CONF_PATH="${CONF_PATH_MAPPER}")
+    target_compile_definitions(benchmarker PRIVATE CONF_PATH="${CONF_PATH_BENCHMARKER}")
     target_compile_definitions(common PRIVATE STORE_PATH="${STORE_PATH}")
     set(CMAKE_INSTALL_PREFIX ${INSTALL_PREF} CACHE PATH "..." FORCE)
     install(TARGETS graph_analyser RUNTIME DESTINATION .)
     install(TARGETS graph_mapper RUNTIME DESTINATION .)
+    install(TARGETS benchmarker RUNTIME DESTINATION .)
     install(DIRECTORY store DESTINATION . USE_SOURCE_PERMISSIONS MESSAGE_NEVER)
 endif()
