Added graphhashset caching, and cache support to graphanalyser and benchmarker. Added multiple option support to benchmarker. Added initial runsolver invokation to benchmarker.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(CMAKE_CXX_FLAGS_DEBUG "-g")# -pg")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 SET(STORE_PATH "./store/")
+SET(CONF_PREFIX "./conf/")
 SET(CONF_PATH_ANALYSER "./graph_analyser.conf")
 SET(CONF_PATH_MAPPER "./graph_mapper.conf")
 SET(CONF_PATH_BENCHMARKER "./benchmarker.conf")
@@ -25,13 +26,14 @@ if (Boost_FOUND)
     add_subdirectory(graphAnalyser)
     add_subdirectory(graphMapper)
     add_subdirectory(benchmarker)
-    target_compile_definitions(graph_analyser PRIVATE CONF_PATH="${CONF_PATH_ANALYSER}")
-    target_compile_definitions(graph_mapper PRIVATE CONF_PATH="${CONF_PATH_MAPPER}")
-    target_compile_definitions(benchmarker PRIVATE CONF_PATH="${CONF_PATH_BENCHMARKER}")
+    target_compile_definitions(graph_analyser PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_ANALYSER}")
+    target_compile_definitions(graph_mapper PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_MAPPER}")
+    target_compile_definitions(benchmarker PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_BENCHMARKER}")
     target_compile_definitions(common PRIVATE STORE_PATH="${STORE_PATH}")
     set(CMAKE_INSTALL_PREFIX ${INSTALL_PREF} CACHE PATH "..." FORCE)
     install(TARGETS graph_analyser RUNTIME DESTINATION .)
     install(TARGETS graph_mapper RUNTIME DESTINATION .)
     install(TARGETS benchmarker RUNTIME DESTINATION .)
     install(DIRECTORY store DESTINATION . USE_SOURCE_PERMISSIONS MESSAGE_NEVER)
+    install(PROGRAMS runsolver DESTINATION .)
 endif()
