Mostly implemented runsolver etc., better commit coming next

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,4 +36,5 @@ if (Boost_FOUND)
     install(TARGETS benchmarker RUNTIME DESTINATION .)
     install(DIRECTORY store DESTINATION . USE_SOURCE_PERMISSIONS MESSAGE_NEVER)
     install(PROGRAMS runsolver DESTINATION .)
+    install(PROGRAMS benchmarker/exts/compare-solutions DESTINATION .)
 endif()
