Added final features to benchmarker: fixed comparing decision solutions, added support for the --save[-correct]-max-size options, and added TIMESTAMP support to --run-id.

--- a/benchmarker/CMakeLists.txt
+++ b/benchmarker/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.13)
 
 add_subdirectory(./../common common)
 include_directories(${SHARED_LIB_INCLUDE_DIR})
-add_executable(benchmarker main.cxx)
+add_executable(benchmarker main.cxx date.h)
 target_link_libraries(benchmarker stdc++fs)
 target_link_libraries(benchmarker common)
