Filled out README. Added per-solver run IDs. Added --clobber option to benchmarker. Reformated much of the help and output. Added cotire.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.13)
-project(solveranalyser)
+project(solveranalyser LANGUAGES CXX)
+
+SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake")
+include(cotire)
 
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED ON)  
@@ -10,15 +13,17 @@ SET(CMAKE_CXX_FLAGS "-Wall -Wextra")
 SET(CMAKE_CXX_FLAGS_DEBUG "-g")# -pg")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
-SET(STORE_PATH "./store/")
-SET(CONF_PREFIX "./conf/")
-SET(CONF_PATH_ANALYSER "./graph_analyser.conf")
+#Customise these values to customise the installation
+SET(INSTALL_PREF "/home/void/Uni/Y3/PRJ/install/") #Unset for installation to default binary directory
+SET(STORE_PATH "./store/") #Unless installing to a self-contained location, this should probably be an absolute path, e.g. inside ~
+SET(CONF_PREFIX "./conf/") #Same for this, alternatively set this to a path in /etc/
+SET(CONF_PATH_ANALYSER "./graph_analyser.conf") #The next three are names of files inside CONF_PREFIX
 SET(CONF_PATH_MAPPER "./graph_mapper.conf")
 SET(CONF_PATH_BENCHMARKER "./benchmarker.conf")
-SET(INSTALL_PREF "/home/void/Uni/Y3/PRJ/install/")
 
 cmake_policy(SET CMP0069 NEW)
 set(CMAKE_INTERPROCEDURAL_OPTIMIZATION FALSE)
+set(COTIRE_MINIMUM_NUMBER_OF_TARGET_SOURCES "1" CACHE STRING "" FORCE)
 
 if (Boost_FOUND)
     set(CMAKE_CXX_STANDARD 17)
@@ -28,13 +33,13 @@ if (Boost_FOUND)
     add_subdirectory(benchmarker)
     target_compile_definitions(graph_analyser PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_ANALYSER}")
     target_compile_definitions(graph_mapper PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_MAPPER}")
-    target_compile_definitions(benchmarker PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_BENCHMARKER}")
+    target_compile_definitions(benchmarker PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_BENCHMARKER}" BIN_PATH="${INSTALL_PREF}")
     target_compile_definitions(common PRIVATE STORE_PATH="${STORE_PATH}")
     set(CMAKE_INSTALL_PREFIX ${INSTALL_PREF} CACHE PATH "..." FORCE)
     install(TARGETS graph_analyser RUNTIME DESTINATION .)
     install(TARGETS graph_mapper RUNTIME DESTINATION .)
     install(TARGETS benchmarker RUNTIME DESTINATION .)
     install(DIRECTORY store DESTINATION . USE_SOURCE_PERMISSIONS MESSAGE_NEVER)
-    install(PROGRAMS benchmarker/external/exts/compare-extensions DESTINATION .)
-    install(PROGRAMS benchmarker/external/runsolver/runsolver DESTINATION .)
+    install(PROGRAMS benchmarker/external/exts/compare-extensions DESTINATION ${INSTALL_PREF})
+    install(PROGRAMS benchmarker/external/runsolver/runsolver DESTINATION ${INSTALL_PREF})
 endif()
