--- a/graphAnalyser/CMakeLists.txt
+++ b/graphAnalyser/CMakeLists.txt
@@ -6,3 +6,5 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/metrics)
 add_executable(graph_analyser main.cxx)
 target_link_libraries(graph_analyser stdc++fs)
 target_link_libraries(graph_analyser common)
+set_target_properties(graph_analyser PROPERTIES COTIRE_ADD_UNITY_BUILD FALSE)
+cotire(graph_analyser)
