Added framework for report-generator and initial report type (evolution)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(CONF_PREFIX "./conf/") #Same for this, alternatively set this to a path in /
 SET(CONF_PATH_ANALYSER "./graph_analyser.conf") #The next three are names of files inside CONF_PREFIX
 SET(CONF_PATH_MAPPER "./graph_mapper.conf")
 SET(CONF_PATH_BENCHMARKER "./benchmarker.conf")
+SET(CONF_PATH_GENERATOR "./report_generator.conf")
 
 cmake_policy(SET CMP0069 NEW)
 set(CMAKE_INTERPROCEDURAL_OPTIMIZATION FALSE)
@@ -31,15 +32,18 @@ if (Boost_FOUND)
     add_subdirectory(graphAnalyser)
     add_subdirectory(graphMapper)
     add_subdirectory(benchmarker)
+    add_subdirectory(reportGenerator)
     target_compile_definitions(graph_analyser PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_ANALYSER}")
     target_compile_definitions(graph_mapper PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_MAPPER}")
+    target_compile_definitions(report_generator PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_GENERATOR}")
     target_compile_definitions(benchmarker PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_BENCHMARKER}" BIN_PATH="${INSTALL_PREF}")
     target_compile_definitions(common PRIVATE STORE_PATH="${STORE_PATH}")
     set(CMAKE_INSTALL_PREFIX ${INSTALL_PREF} CACHE PATH "..." FORCE)
     install(TARGETS graph_analyser RUNTIME DESTINATION .)
     install(TARGETS graph_mapper RUNTIME DESTINATION .)
     install(TARGETS benchmarker RUNTIME DESTINATION .)
-    install(DIRECTORY store DESTINATION . USE_SOURCE_PERMISSIONS MESSAGE_NEVER)
+    install(TARGETS report_generator RUNTIME DESTINATION .)
+#   install(DIRECTORY store DESTINATION . USE_SOURCE_PERMISSIONS MESSAGE_NEVER)
     install(PROGRAMS benchmarker/external/exts/compare-extensions DESTINATION ${INSTALL_PREF})
     install(PROGRAMS benchmarker/external/runsolver/runsolver DESTINATION ${INSTALL_PREF})
 endif()
