WIP commit. Added license, fixed up some quirks in benchmarker, did significant work on reports.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ if (Boost_FOUND)
     add_subdirectory(reportGenerator)
     target_compile_definitions(graph_analyser PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_ANALYSER}")
     target_compile_definitions(graph_mapper PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_MAPPER}")
-    target_compile_definitions(report_generator PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_GENERATOR}")
+    target_compile_definitions(report_generator PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_GENERATOR}" STORE_PATH="${STORE_PATH}")
     target_compile_definitions(benchmarker PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_BENCHMARKER}" BIN_PATH="${INSTALL_PREF}")
     target_compile_definitions(common PRIVATE STORE_PATH="${STORE_PATH}")
     set(CMAKE_INSTALL_PREFIX ${INSTALL_PREF} CACHE PATH "..." FORCE)
@@ -43,7 +43,7 @@ if (Boost_FOUND)
     install(TARGETS graph_mapper RUNTIME DESTINATION .)
     install(TARGETS benchmarker RUNTIME DESTINATION .)
     install(TARGETS report_generator RUNTIME DESTINATION .)
-#   install(DIRECTORY store DESTINATION . USE_SOURCE_PERMISSIONS MESSAGE_NEVER)
+    install(DIRECTORY store DESTINATION . USE_SOURCE_PERMISSIONS MESSAGE_NEVER)
     install(PROGRAMS benchmarker/external/exts/compare-extensions DESTINATION ${INSTALL_PREF})
     install(PROGRAMS benchmarker/external/runsolver/runsolver DESTINATION ${INSTALL_PREF})
 endif()
