Added some extra error handling to benchmarker and fixed CMakeLists; updated readme with better quickstart.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ SET(CMAKE_CXX_FLAGS_DEBUG "-g")# -pg")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 #Customise these values to customise the installation
-SET(INSTALL_PREF "../../install-test/") #Unset for installation to default binary directory, or change to a different portable directory
+SET(INSTALL_PREF "../../../install/") #Unset for installation to default binary directory, or change to a different portable directory
 SET(STORE_PATH "./store/") #Unless installing to a self-contained location, this should probably be an absolute path, e.g. inside ~
 SET(CONF_PREFIX "./conf/") #Same for this, alternatively set this to a path in /etc/
 SET(CONF_PATH_ANALYSER "./graph_analyser.conf") #The next three are names of files inside CONF_PREFIX
@@ -36,7 +36,7 @@ if (Boost_FOUND)
     target_compile_definitions(graph_analyser PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_ANALYSER}")
     target_compile_definitions(graph_mapper PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_MAPPER}")
     target_compile_definitions(report_generator PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_GENERATOR}" STORE_PATH="${STORE_PATH}")
-    target_compile_definitions(benchmarker PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_BENCHMARKER}" BIN_PATH="${INSTALL_PREF}")
+    target_compile_definitions(benchmarker PRIVATE CONF_PATH="${CONF_PREFIX}${CONF_PATH_BENCHMARKER}" BIN_PATH=".")
     target_compile_definitions(common PRIVATE STORE_PATH="${STORE_PATH}")
     set(CMAKE_INSTALL_PREFIX ${INSTALL_PREF} CACHE PATH "..." FORCE)
     install(TARGETS graph_analyser RUNTIME DESTINATION .)
@@ -44,6 +44,6 @@ if (Boost_FOUND)
     install(TARGETS benchmarker RUNTIME DESTINATION .)
     install(TARGETS report_generator RUNTIME DESTINATION .)
     install(DIRECTORY store DESTINATION . USE_SOURCE_PERMISSIONS MESSAGE_NEVER)
-    install(PROGRAMS benchmarker/external/exts/compare-extensions DESTINATION ${INSTALL_PREF})
-    install(PROGRAMS benchmarker/external/runsolver/runsolver DESTINATION ${INSTALL_PREF})
+    install(PROGRAMS benchmarker/external/exts/compare-extensions DESTINATION .)
+    install(PROGRAMS benchmarker/external/runsolver/runsolver DESTINATION .)
 endif()
